fixed footer gradient z-index

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -113,6 +113,7 @@ body {
 		position: absolute;
 		bottom: 0;
 		left: 0;
+		z-index: -1;
 	
 		@include media-breakpoint-down(lg) {
 			background-size: auto 1800px;
