--- a/src/scss/pages/page-what-is-celestia.scss
+++ b/src/scss/pages/page-what-is-celestia.scss
@@ -634,10 +634,3 @@
 		}
 	}
 }
-
-.what-is-celestia + footer {
-	padding-top: 80px;
-	@include media-breakpoint-down(md) {
-		padding-top: 20px;
-	}
-}
